# swiftness-solana

./: .gitignore  Cargo.toml  README.md
allocator/: Cargo.toml  README.md
allocator/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
examples/: client.rs  fetch.rs  serializer.rs  validate.rs
resources/: small.json
serializer/: Cargo.toml  small.json
serializer/src/: main.rs
src/: allocator.rs  lib.rs
