[package]
name = "swiftness_solana"
version = "0.1.0"
edition = "2021"

[lib]
name = "swiftness_solana"
crate-type = ["cdylib", "lib"]
rust-version = "1.84.0"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
solana-program = { git = "https://github.com/Okm165/solana.git", branch = "fix/deps" }
swiftness_air = { git = "https://github.com/iosis-tech/swiftness.git", rev = "29c780d4", default-features = false, features = [
    "recursive",
    "keccak_160_lsb",
    "stone6",
] }
swiftness_stark = { git = "https://github.com/iosis-tech/swiftness.git", rev = "29c780d4", default-features = false, features = [
    "recursive",
    "keccak_160_lsb",
    "stone6",
] }

[dev-dependencies]
swiftness = { git = "https://github.com/iosis-tech/swiftness.git", rev = "29c780d4", default-features = false, features = [
    "recursive",
    "keccak_160_lsb",
    "stone6",
] }
swiftness_proof_parser = { git = "https://github.com/iosis-tech/swiftness.git", rev = "29c780d4" }
solana-rpc-client = "2.0.9"
solana-rpc-client-api = "2.0.9"
solana-sdk = "2.0.9"
tokio = "1.40.0"
futures = "0.3.30"
serde_yaml = "0.9.34"
