[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.4", features = ["derive"] }
solana-rpc-client = "2.0.9"
solana-rpc-client-api = "2.0.9"
solana-sdk = "2.0.9"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
futures = "0.3.30"

