[package]
name = "serializer"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.4", features = ["derive"] }
swiftness = { git = "https://github.com/iosis-tech/swiftness.git", rev = "f87a6dda4926664c5e6988a53c55fe8f8f1c4a30" }
swiftness_proof_parser = { git = "https://github.com/iosis-tech/swiftness.git", rev = "f87a6dda4926664c5e6988a53c55fe8f8f1c4a30" }
